2011-07-14  John Nash <nashjc@uottawa.ca>
    
        * man/uobyqa.Rd: corrected output names in documentation. Added msg.
        * man/newuoa.Rd: corrected output names in documentation. Added msg.
        * man/bobyqa.Rd: corrected output names in documentation. Added msg.

2011-07-11  John Nash <nashjc@uottawa.ca>, Kate Mullen <kmullen@nist.gov>
	
	* R/minqa.R:  bobyqa bug fixes thanks to Ben Bolker: fixed rhobeg 
	intitialization problem and issue with parscale.

2011-02-28  John Nash <nashjc@uottawa.ca>

        * DESCRIPTION (Version): New minor version number

	* R/minqa.R fix npt to min(n+2, 2*n) in call

2011-02-02  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): New minor version number

	* src/minqa.cpp (calfun): check for finite value of objective
	function.

2011-01-27  Douglas Bates  <bates@stat.wisc.edu>

	* src/minqa.cpp: Expand RCPP_FUNCTION_X macros to make debugging
	easier. 

2010-11-19  Douglas Bates  <bates@stat.wisc.edu>

	* src/Makevars (PKG_LIBS): Change to the backticks version

2010-11-14  Douglas Bates  <bates@stat.wisc.edu>

	* tests/newuoa.R: added test for newuoa which should signal an
	error.

	* src/minqa.cpp: reverted the removal of the ierr argument in
	calls to Fortran code.

2010-08-10  John Nash  <nashjc@uottawa.ca>
        * man/bobyqa.Rd: Added revised codes for error exits and
	tests for some of these errors. Note that the error for npt
	(number of interpolation points) out of desired range does not
	work. It appears the minqa.R code forces a valid setting, and
	ignores user input.

        * man/newuoa.Rd: Added revised codes for error exits and
	tests for some of these errors. Note that the error for npt
	(number of interpolation points) out of desired range does not
	work. It appears the minqa.R code forces a valid setting, and
	ignores user input.

        * man/uobyqa.Rd: Added revised codes for error exits and
	tests for some of these errors. 
